Applied darker theme to colors.

--- a/src/default/assets/css/_constants.sass
+++ b/src/default/assets/css/_constants.sass
@@ -11,29 +11,29 @@ $LINE_HEIGHT: 1.333em
 
 // Colors
 //
-$COLOR_BACKGROUND: #fdfdfd
-$COLOR_TEXT: #222
-$COLOR_TEXT_ASIDE: #707070
+$COLOR_BACKGROUND: #1e1e1e
+$COLOR_TEXT: #e6e6e6
+$COLOR_TEXT_ASIDE: #585858
 $COLOR_LINK: #4da6ff
 
-$COLOR_MENU_DIVIDER: #eee
-$COLOR_MENU_DIVIDER_FOCUS: #000
-$COLOR_MENU_LABEL: #707070
+$COLOR_MENU_DIVIDER: #e6e6e6
+$COLOR_MENU_DIVIDER_FOCUS: #FFF
+$COLOR_MENU_LABEL: #5f5f5f
 
-$COLOR_PANEL: #fff
-$COLOR_PANEL_DIVIDER: #eee
+$COLOR_PANEL: #151515
+$COLOR_PANEL_DIVIDER: #414141
 
-$COLOR_COMMENT_TAG: #707070
-$COLOR_COMMENT_TAG_TEXT: #fff
+$COLOR_COMMENT_TAG: #1e1e1e
+$COLOR_COMMENT_TAG_TEXT: #e6e6e6
 
-$COLOR_CODE_BACKGROUND: rgba(#000, 0.04)
+$COLOR_CODE_BACKGROUND: rgba(#161616, 0.04)
 
-$COLOR_TS: #9600ff
-$COLOR_TS_INTERFACE: #647F1B
-$COLOR_TS_ENUM: #937210
-$COLOR_TS_CLASS: #0672DE
-$COLOR_TS_PRIVATE: #707070
+$COLOR_TS: #be60ff
+$COLOR_TS_INTERFACE: #c9ff39
+$COLOR_TS_ENUM: #ffbf00
+$COLOR_TS_CLASS: #4da6ff
+$COLOR_TS_PRIVATE: #808080
 
-$TOOLBAR_COLOR: #fff
-$TOOLBAR_TEXT_COLOR: #333
+$TOOLBAR_COLOR: #1e1e1e
+$TOOLBAR_TEXT_COLOR: #e6e6e6
 $TOOLBAR_HEIGHT: 40px
