Fixed background color for tables.

--- a/src/default/assets/css/elements/_panel.sass
+++ b/src/default/assets/css/elements/_panel.sass
@@ -41,11 +41,11 @@
             border: 1px solid #ddd
 
         tr
-            background-color: #fff
+            background-color: $COLOR_BACKGROUND
             border-top: 1px solid #ccc
 
             &:nth-child(2n)
-                background-color: #f8f8f8
+                background-color: $COLOR_BACKGROUND
 
 
 // Holds a series of panels with an optional heading.
