--- a/src/default/assets/css/_constants.sass
+++ b/src/default/assets/css/_constants.sass
@@ -23,7 +23,7 @@ $COLOR_MENU_LABEL: #5f5f5f
 $COLOR_PANEL: #151515
 $COLOR_PANEL_DIVIDER: #414141
 
-$COLOR_COMMENT_TAG: #1e1e1e
+$COLOR_COMMENT_TAG: #727272
 $COLOR_COMMENT_TAG_TEXT: #e6e6e6
 
 $COLOR_CODE_BACKGROUND: rgba(#161616, 0.04)
@@ -35,5 +35,5 @@ $COLOR_TS_CLASS: #4da6ff
 $COLOR_TS_PRIVATE: #808080
 
 $TOOLBAR_COLOR: #1e1e1e
-$TOOLBAR_TEXT_COLOR: #e6e6e6
+$TOOLBAR_TEXT_COLOR: #cbcbcb
 $TOOLBAR_HEIGHT: 40px
