Improved a bit colors.

--- a/src/default/assets/css/layouts/_default.sass
+++ b/src/default/assets/css/layouts/_default.sass
@@ -97,10 +97,10 @@ html.default
 .tsd-breadcrumb
     margin: 0
     padding: 0
-    color: $COLOR_TEXT_ASIDE
+    color: $TOOLBAR_TEXT_COLOR
 
     a
-        color: $COLOR_TEXT_ASIDE
+        color: $TOOLBAR_TEXT_COLOR
         text-decoration: none
 
         &:hover
