--- a/src/default/assets/css/_constants.sass
+++ b/src/default/assets/css/_constants.sass
@@ -11,8 +11,8 @@ $LINE_HEIGHT: 1.333em
 
 // Colors
 //
-$COLOR_BACKGROUND: #1e1e1e
-$COLOR_TEXT: #e6e6e6
+$COLOR_BACKGROUND: #1d1d1d
+$COLOR_TEXT: #ececec
 $COLOR_TEXT_ASIDE: #585858
 $COLOR_LINK: #4da6ff
 
@@ -20,13 +20,13 @@ $COLOR_MENU_DIVIDER: #e6e6e6
 $COLOR_MENU_DIVIDER_FOCUS: #FFF
 $COLOR_MENU_LABEL: #5f5f5f
 
-$COLOR_PANEL: #151515
+$COLOR_PANEL: #171717
 $COLOR_PANEL_DIVIDER: #414141
 
 $COLOR_COMMENT_TAG: #727272
 $COLOR_COMMENT_TAG_TEXT: #e6e6e6
 
-$COLOR_CODE_BACKGROUND: rgba(#161616, 0.04)
+$COLOR_CODE_BACKGROUND: #151515
 
 $COLOR_TS: #be60ff
 $COLOR_TS_INTERFACE: #c9ff39
@@ -35,5 +35,5 @@ $COLOR_TS_CLASS: #4da6ff
 $COLOR_TS_PRIVATE: #808080
 
 $TOOLBAR_COLOR: #1e1e1e
-$TOOLBAR_TEXT_COLOR: #cbcbcb
+$TOOLBAR_TEXT_COLOR: #c3c3c3
 $TOOLBAR_HEIGHT: 40px
