More fixes in colors, everything should appear right.

--- a/src/default/assets/css/_constants.sass
+++ b/src/default/assets/css/_constants.sass
@@ -11,7 +11,7 @@ $LINE_HEIGHT: 1.333em
 
 // Colors
 //
-$COLOR_BACKGROUND: #1d1d1d
+$COLOR_BACKGROUND: #1e1e1e
 $COLOR_TEXT: #ececec
 $COLOR_TEXT_ASIDE: #585858
 $COLOR_LINK: #4da6ff
@@ -22,6 +22,8 @@ $COLOR_MENU_LABEL: #5f5f5f
 
 $COLOR_PANEL: #171717
 $COLOR_PANEL_DIVIDER: #414141
+
+$COLOR_SOURCES: #ababab
 
 $COLOR_COMMENT_TAG: #727272
 $COLOR_COMMENT_TAG_TEXT: #e6e6e6
@@ -35,5 +37,5 @@ $COLOR_TS_CLASS: #4da6ff
 $COLOR_TS_PRIVATE: #808080
 
 $TOOLBAR_COLOR: #1e1e1e
-$TOOLBAR_TEXT_COLOR: #c3c3c3
+$TOOLBAR_TEXT_COLOR: #d0d0d0
 $TOOLBAR_HEIGHT: 40px
