--- a/src/default/assets/css/elements/_sources.sass
+++ b/src/default/assets/css/elements/_sources.sass
@@ -9,11 +9,10 @@
 //
 .tsd-sources
     font-size: $FONT_SIZE_MONO
-    color: $TOOLBAR_TEXT_COLOR
+    color: $COLOR_SOURCES
     margin: 0 0 1em 0
 
     a
-        color: $TOOLBAR_TEXT_COLOR
         text-decoration: underline
 
     ul, p
