--- a/src/default/assets/css/elements/_signatures.sass
+++ b/src/default/assets/css/elements/_signatures.sass
@@ -38,12 +38,13 @@
                 left: 20px
 
 .tsd-signature-symbol
-    color: $TOOLBAR_TEXT_COLOR
     font-weight: normal
+    color: $COLOR_SOURCES
 
 .tsd-signature-type
     font-style: italic
     font-weight: normal
+	color: $COLOR_SOURCES
 
 
 // Displays a list of signatures.
