--- a/src/default/assets/css/layouts/_default.sass
+++ b/src/default/assets/css/layouts/_default.sass
@@ -28,7 +28,7 @@ html.default
             max-width: 450px
             visibility: hidden
             background-color: $COLOR_PANEL
-            transform: translate(100%,0)
+            transform: translate(100%, 0)
 
             > *:last-child
                 padding-bottom: 20px
@@ -83,7 +83,7 @@ html.default
 
             .col-menu
                 visibility: visible
-                transform: translate(0,0)
+                transform: translate(0, 0)
 
 .tsd-page-title
     padding: 70px 0 20px 0
