--- a/src/default/assets/css/setup/_animations.sass
+++ b/src/default/assets/css/setup/_animations.sass
@@ -30,25 +30,25 @@
 
 @keyframes shift-to-left
     from
-        transform: translate(0,0)
+        transform: translate(0, 0)
     to
-        transform: translate(-25%,0)
+        transform: translate(-25%, 0)
 
 @keyframes unshift-to-left
     from
-        transform: translate(-25%,0)
+        transform: translate(-25%, 0)
     to
-        transform: translate(0,0)
+        transform: translate(0, 0)
 
 @keyframes pop-in-from-right
     from
-        transform: translate(100%,0)
+        transform: translate(100%, 0)
     to
-        transform: translate(0,0)
+        transform: translate(0, 0)
 
 @keyframes pop-out-to-right
     from
-        transform: translate(0,0)
+        transform: translate(0, 0)
         visibility: visible
     to
-        transform: translate(100%,0)
+        transform: translate(100%, 0)
