--- a/src/default/assets/css/elements/_comment.sass
+++ b/src/default/assets/css/elements/_comment.sass
@@ -17,7 +17,7 @@ dl.tsd-comment-tags
         padding: 1px 5px
         margin: 0 10px 0 0
         border-radius: 4px
-        border: 1px solid $COLOR_COMMENT_TAG
+        border: 1px solid $COLOR_MENU_LABEL
         color: $COLOR_COMMENT_TAG_TEXT
         font-size: 0.8em
         font-weight: normal
