--- a/src/default/assets/css/elements/_search.sass
+++ b/src/default/assets/css/elements/_search.sass
@@ -56,7 +56,7 @@
 
         li.current,
         li:hover
-            background-color: $COLOR_PANEL_DIVIDER
+            background-color: $COLOR_COMMENT_TAG
 
         a
             display: block
@@ -65,11 +65,11 @@
                 top: 10px
 
         span.parent
-            color: $COLOR_TEXT_ASIDE
+            color: $COLOR_SOURCES
             font-weight: normal
 
     &.has-focus
-        background-color: $COLOR_PANEL_DIVIDER
+        background-color: $COLOR_COMMENT_TAG
 
         .field input
             top: 0
