More fixes on colors.

--- a/src/default/assets/css/elements/_toolbar.sass
+++ b/src/default/assets/css/elements/_toolbar.sass
@@ -17,7 +17,7 @@
     left: 0
     width: 100%
     height: $TOOLBAR_HEIGHT
-    color: $TOOLBAR_TEXT_COLOR
+    color: $COLOR_MENU_DIVIDER_FOCUS
     background: $TOOLBAR_COLOR
     border-bottom: 1px solid $COLOR_PANEL_DIVIDER
     transition: transform .3s linear
