fix: Fix colors for overloads.

--- a/src/default/assets/css/elements/_signatures.sass
+++ b/src/default/assets/css/elements/_signatures.sass
@@ -39,12 +39,12 @@
 
 .tsd-signature-symbol
     font-weight: normal
-    color: $COLOR_SOURCES
+    color: $COLOR_PANEL_DIVIDER
 
 .tsd-signature-type
     font-style: italic
     font-weight: normal
-    color: $COLOR_SOURCES
+    color: $COLOR_PANEL_DIVIDER
 
 
 // Displays a list of signatures.
