refactor: Use CSS variables for theme properties.

--- a/src/default/assets/css/elements/_member.sass
+++ b/src/default/assets/css/elements/_member.sass
@@ -2,8 +2,8 @@
     display: inline-block
     padding: 1px 5px
     border-radius: 4px
-    color: $COLOR_COMMENT_TAG_TEXT
-    background-color: $COLOR_COMMENT_TAG
+    color: var(--color-comment-tag-text)
+    background-color: var(--color-comment-tag)
     text-indent: 0
     font-size: $FONT_SIZE_MONO
     font-weight: normal
@@ -21,16 +21,16 @@
         border-bottom: none
 
     a[data-tsd-kind]
-        color: $COLOR_TS
+        color: var(--color-ts)
 
     a[data-tsd-kind="Interface"]
-        color: $COLOR_TS_INTERFACE
+        color: var(--color-ts-interface)
 
     a[data-tsd-kind="Enum"]
-        color: $COLOR_TS_ENUM
+        color: var(--color-ts-enum)
 
     a[data-tsd-kind="Class"]
-        color: $COLOR_TS_CLASS
+        color: var(--color-ts-class)
 
     a[data-tsd-kind="Private"]
-        color: $COLOR_TS_PRIVATE
+        color: var(--color-ts-private)
