--- a/src/default/assets/css/elements/_sources.sass
+++ b/src/default/assets/css/elements/_sources.sass
@@ -9,7 +9,7 @@
 //
 .tsd-sources
     font-size: $FONT_SIZE_MONO
-    color: $COLOR_SOURCES
+    color: var(--color-sources)
     margin: 0 0 1em 0
 
     a
