--- a/src/default/assets/css/elements/_filter.sass
+++ b/src/default/assets/css/elements/_filter.sass
@@ -42,7 +42,7 @@
             top: $TOOLBAR_HEIGHT
             right: 20px
             height: auto
-            background-color: $COLOR_PANEL
+            background-color: var(--color-panel)
             visibility: hidden
             transform: translate(50%, 0)
             box-shadow: 0 0 4px rgba(#000, 0.25)
