--- a/src/default/assets/css/elements/_navigation.sass
+++ b/src/default/assets/css/elements/_navigation.sass
@@ -20,7 +20,7 @@
         padding-top: 2px
         padding-bottom: 2px
         border-left: 2px solid transparent
-        color: $COLOR_TEXT
+        color: var(--color-text)
         text-decoration: none
         transition: border-left-color 0.1s
 
@@ -64,10 +64,10 @@
         +INDENTS(6, 5, 20)
 
     > ul
-        border-bottom: 1px solid $COLOR_PANEL_DIVIDER
+        border-bottom: 1px solid var(--color-panel-divider)
 
     li
-        border-top: 1px solid $COLOR_PANEL_DIVIDER
+        border-top: 1px solid var(--color-panel-divider)
 
         &.current > a
             font-weight: bold
@@ -75,7 +75,7 @@
         &.label span
             display: block
             padding: 20px 0 6px 5px
-            color: $COLOR_MENU_LABEL
+            color: var(--color-menu-label)
 
         &.globals + li > span,
         &.globals + li > a
@@ -126,16 +126,16 @@
         transition: opacity 0.2s
 
         &.current a
-            border-left-color: $COLOR_PANEL_DIVIDER
+            border-left-color: var(--color-panel-divider)
 
     li.focus > a,
     ul.current li.focus > a
-        border-left-color: $COLOR_MENU_DIVIDER_FOCUS
+        border-left-color: var(--color-menu-divider-focus)
 
     li.current
         margin-top: 20px
         margin-bottom: 20px
-        border-left-color: $COLOR_PANEL_DIVIDER
+        border-left-color: var(--color-panel-divider)
 
         > a
             font-weight: bold
