--- a/src/default/assets/css/elements/_panel.sass
+++ b/src/default/assets/css/elements/_panel.sass
@@ -10,7 +10,7 @@
     @extend %prevent-children-margin
     margin: 20px 0
     padding: 20px
-    background-color: $COLOR_PANEL
+    background-color: var(--color-panel)
     box-shadow: 0 0 4px rgba(#000, 0.25)
 
     &:empty
@@ -19,7 +19,7 @@
     > h1, > h2, > h3
         margin: 1.5em -20px 10px -20px
         padding: 0 20px 10px 20px
-        border-bottom: 1px solid $COLOR_PANEL_DIVIDER
+        border-bottom: 1px solid var(--color-panel-divider)
 
         &.tsd-before-signature
             margin-bottom: 0
@@ -41,11 +41,11 @@
             border: 1px solid #ddd
 
         tr
-            background-color: $COLOR_BACKGROUND
+            background-color: var(--color-background)
             border-top: 1px solid #ccc
 
             &:nth-child(2n)
-                background-color: $COLOR_BACKGROUND
+                background-color: var(--color-background)
 
 
 // Holds a series of panels with an optional heading.
