--- a/src/default/assets/css/elements/_search.sass
+++ b/src/default/assets/css/elements/_search.sass
@@ -23,7 +23,7 @@
             outline: 0
             border: 0
             background: transparent
-            color: $COLOR_TEXT
+            color: var(--color-text)
 
         label
             position: absolute
@@ -46,17 +46,17 @@
 
         li
             padding: 0 10px
-            background-color: $COLOR_BACKGROUND
+            background-color: var(--color-background)
 
         li:nth-child(even)
-            background-color: $COLOR_PANEL
+            background-color: var(--color-panel)
 
         li.state
             display: none
 
         li.current,
         li:hover
-            background-color: $COLOR_COMMENT_TAG
+            background-color: var(--color-comment-tag)
 
         a
             display: block
@@ -65,11 +65,11 @@
                 top: 10px
 
         span.parent
-            color: $COLOR_SOURCES
+            color: var(--color-sources)
             font-weight: normal
 
     &.has-focus
-        background-color: $COLOR_COMMENT_TAG
+        background-color: var(--color-comment-tag)
 
         .field input
             top: 0
