--- a/src/default/assets/css/elements/_signatures.sass
+++ b/src/default/assets/css/elements/_signatures.sass
@@ -14,7 +14,7 @@
 .tsd-signature
     margin: 0 0 1em 0
     padding: 10px
-    border: 1px solid $COLOR_PANEL_DIVIDER
+    border: 1px solid var(--color-panel-divider)
     font-family: $FONT_FAMILY_MONO
     font-size: $FONT_SIZE_MONO
     overflow-x: auto
@@ -39,12 +39,12 @@
 
 .tsd-signature-symbol
     font-weight: normal
-    color: $COLOR_PANEL_DIVIDER
+    color: var(--color-sources)
 
 .tsd-signature-type
     font-style: italic
     font-weight: normal
-    color: $COLOR_PANEL_DIVIDER
+    color: var(--color-sources)
 
 
 // Displays a list of signatures.
@@ -59,7 +59,7 @@
 .tsd-signatures
     padding: 0
     margin: 0 0 1em 0
-    border: 1px solid $COLOR_PANEL_DIVIDER
+    border: 1px solid var(--color-panel-divider)
 
     .tsd-signature
         margin: 0
@@ -70,7 +70,7 @@
             border-top-width: 0
 
         &.current
-            background-color: $COLOR_PANEL_DIVIDER
+            background-color: var(--color-panel-divider)
 
     &.active > .tsd-signature
         cursor: pointer
