--- a/src/default/partials/header.hbs
+++ b/src/default/partials/header.hbs
@@ -53,7 +53,9 @@
 				</ul>
 			{{/if}}
 			<h1>{{#compact}}
-				{{model.kindString}}&nbsp;
+                {{#ifCond model.kindString "!==" "Project" }}
+                    {{model.kindString}}&nbsp;
+                {{/ifCond}}
 				{{model.name}}
 				{{#if model.typeParameters}}
 					&lt;
