fix: Fix selected overload background color.

--- a/src/default/assets/css/elements/_signatures.sass
+++ b/src/default/assets/css/elements/_signatures.sass
@@ -70,7 +70,7 @@
 			border-top-width: 0
 
 		&.current
-			background-color: var(--color-panel-divider)
+			background-color: var(--color-comment-tag)
 
 	&.active > .tsd-signature
 		cursor: pointer
