revert: Revert 316f2862e6cce35ef5627855543b01237d53493a.

--- a/src/default/assets/css/_theme.scss
+++ b/src/default/assets/css/_theme.scss
@@ -1,29 +1,29 @@
 :root {
-	--color-background: #1e1e1e;
-	--color-text: #ececec;
-	--color-text-aside: #585858;
-	--color-link: #4da6ff;
+    --color-background: #1e1e1e;
+    --color-text: #ececec;
+    --color-text-aside: #585858;
+    --color-link: #4da6ff;
 
-	--color-menu-divider: #e6e6e6;
-	--color-menu-divider-focus: #FFF;
-	--color-menu-label: #5f5f5f;
+    --color-menu-divider: #e6e6e6;
+    --color-menu-divider-focus: #fff;
+    --color-menu-label: #5f5f5f;
 
-	--color-panel: #171717;
-	--color-panel-divider: #414141;
+    --color-panel: #171717;
+    --color-panel-divider: #414141;
 
-	--color-sources: #ababab;
+    --color-sources: #ababab;
 
-	--color-comment-tag: #282828;
-	--color-comment-tag-text: #e6e6e6;
+    --color-comment-tag: #282828;
+    --color-comment-tag-text: #e6e6e6;
 
-	--color-code-background: #151515;
+    --color-code-background: #151515;
 
-	--color-ts: #be60ff;
-	--color-ts-interface: #c9ff39;
-	--color-ts-enum: #ffbf00;
-	--color-ts-class: #4da6ff;
-	--color-ts-private: #808080;
+    --color-ts: #be60ff;
+    --color-ts-interface: #c9ff39;
+    --color-ts-enum: #ffbf00;
+    --color-ts-class: #4da6ff;
+    --color-ts-private: #808080;
 
-	--toolbar-color: #1e1e1e;
-	--toolbar-text-color: #d0d0d0;
+    --toolbar-color: #1e1e1e;
+    --toolbar-text-color: #d0d0d0;
 }
