fix: Fix missing import.

--- a/src/default/assets/css/setup/_typography.sass
+++ b/src/default/assets/css/setup/_typography.sass
@@ -26,6 +26,11 @@ pre
         font-size: 100%
         background-color: transparent
 
+blockquote
+    margin: 1em 0
+    padding-left: 1em
+    border-left: 4px solid gray
+
 .tsd-typography
     line-height: $LINE_HEIGHT
 
